Search box added

--- a/src/css/componentsCss/CaseContainerHome.css
+++ b/src/css/componentsCss/CaseContainerHome.css
@@ -14,7 +14,40 @@
     /* background-color: red; */
     gap:3rem;
 }
-
+.addCase{
+    position: fixed;
+    bottom: 9vh;
+    right: 5vw;
+    z-index: 2;
+    background: #FF4742;
+    border: 1px solid #FF4742;
+    border-radius: 6px;
+    box-shadow: rgba(0, 0, 0, 0.1) 1px 2px 4px;
+    box-sizing: border-box;
+    color: #FFFFFF;
+    cursor: pointer;
+    display: inline-block;
+    font-family: nunito,roboto,proxima-nova,"proxima nova",sans-serif;
+    font-size: 16px;
+    font-weight: 800;
+    line-height: 16px;
+    min-height: 50px;
+    outline: 0;
+    padding: 12px 14px;
+    text-align: center;
+    text-rendering: geometricprecision;
+    text-transform: none;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    vertical-align: middle;
+}
+.addCase:hover,
+.addCase:active {
+  background-color: #f3231c;
+  /* background-position: 0 0;
+  color: #FF4742; */
+}
 .CaseContainerMainOuter {
     /* display: flex;
     
