--- a/src/css/componentsCss/CaseContainerHome.css
+++ b/src/css/componentsCss/CaseContainerHome.css
@@ -2,18 +2,7 @@
     background-color: #faeab1;
 } */
 
-#OuterCaseContainer {
-    /* display: flex;
-    width: 100vw;
-    height: 100vh;
-    justify-content: center; */
-    margin:1rem 8rem;
-    display: flex;
-    flex-direction: column;
-
-    /* background-color: red; */
-    gap:3rem;
-}
+/* 
 .addCase{
     position: fixed;
     bottom: 9vh;
@@ -45,21 +34,8 @@
 .addCase:hover,
 .addCase:active {
   background-color: #f3231c;
-  /* background-position: 0 0;
-  color: #FF4742; */
 }
 .CaseContainerMainOuter {
-    /* display: flex;
-    
-    margin: 10px;
-    padding: 10px;
-    width: 80%;
-    height: 40%;
-    align-items: center;
-    border: 2px solid black;
-    
-    border-radius: 5px;
-    backdrop-filter: blur(12px); */
     background-color: hsla(0, 0%, 100%, .01);
     border: 2px solid hsla(0, 0%, 100%, .5);
     border-radius: 1rem;
@@ -72,20 +48,11 @@
 }
 
 .CaseBrief {
-    /* display: flex;
-    flex-direction: column;
-    background-color: red;
-    
-    height: 100%;
-    width: 50%; */
-    /* background-color: yellow; */
     width: 50%;
     margin-right: 10%;
 }
 
 .CaseNameDiv {
-    /* background-color: green; */
-    /* background-color: white; */
     font-size: 2.5vw;
     max-height: 12vh;
     overflow-y: scroll;
@@ -103,8 +70,6 @@
     width: 16px;
 }
 .CaseImage {
-    /* width: 30%; */
-    /* background-color: aqua; */
     height: 100%;
     margin-right: 10%;
 }
@@ -112,9 +77,6 @@
     height: 100%;
 }
 .AddNewDetailButtons {
-    /* display: flex;
-    flex-direction: column; */
-    /* background-color: blue; */
     width:10%;
     display: flex;
     flex-direction: column;
@@ -123,7 +85,6 @@
 .AddNewDetailButton{
     width:100%;
     padding:0.8rem 0.5rem;
-    /* margin-bottom: 1.5rem; */
     font-weight: 600;
     font-size: 1rem;
     background-color: white;
@@ -134,4 +95,339 @@
 .AddNewDetailButton:hover{
     background-color: black;
     color: white;
+} */
+/* CSS reset */
+*,
+*::after,
+*::before {
+  box-sizing: inherit;
+  margin: 0;
+  padding: 0;
+}
+
+html { font-size: 62.5%; }
+#OuterCaseContainer{
+    box-sizing: border-box;
+    font-family: 'Open Sans', sans-serif;
+    position: relative;
+    margin:1rem 8rem;
+    display: flex;
+    gap:3rem;
+  }
+.addCase{
+    position: fixed;
+    bottom: 9vh;
+    right: 5vw;
+    z-index: 2;
+    background: #FF4742;
+    border: 1px solid #FF4742;
+    border-radius: 6px;
+    box-shadow: rgba(0, 0, 0, 0.1) 1px 2px 4px;
+    box-sizing: border-box;
+    color: #FFFFFF;
+    cursor: pointer;
+    display: inline-block;
+    font-family: nunito,roboto,proxima-nova,"proxima nova",sans-serif;
+    font-size: 16px;
+    font-weight: 800;
+    line-height: 16px;
+    min-height: 50px;
+    outline: 0;
+    padding: 12px 14px;
+    text-align: center;
+    text-rendering: geometricprecision;
+    text-transform: none;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    vertical-align: middle;
+}
+.addCase:hover,
+.addCase:active {
+  background-color: #f3231c;
+}
+/* Typography =======================*/
+
+/* Headings */
+
+/* Main heading for card's front cover */
+.card-front__heading {
+  font-size: 1.5rem;
+  margin-top: .25rem;
+}
+
+/* Main heading for inside page */
+.inside-page__heading { 
+  padding-bottom: 1rem; 
+  width: 100%;
+}
+
+/* Mixed */
+
+/* For both inside page's main heading and 'view me' text on card front cover */
+.inside-page__heading,
+.card-front__text-view {
+  font-size: 1.3rem;
+  font-weight: 800;
+  margin-top: .2rem;
+  
+}
+
+.inside-page__heading--city,
+.card-front__text-view--city { 
+    color: #584e53; 
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap:1.3rem;
+}
+.view__case{
+    border: 2px solid #584e53;
+    outline: none;
+    border-radius: 5px;
+    padding: 6px 10px;
+}
+/* Front cover */
+
+.card-front__tp { color: #fafbfa; }
+
+/* For pricing text on card front cover */
+.card-front__text-price {
+  font-size: 1.2rem;
+  margin-top: -.2rem;
+}
+
+/* Back cover */
+
+/* For inside page's body text */
+.inside-page__text {
+  color: #333;
+  font-size: 1vw;
+}
+
+/* Icons ===========================================*/
+
+.card-front__icon {
+  fill: #fafbfa;
+  font-size: 3vw;
+  height: 3.25rem;
+  margin-top: -.5rem;
+  width: 3.25rem;
+}
+
+/* Buttons =================================================*/
+
+.inside-page__btn {
+  background-color: transparent;
+  border: 3px solid;
+  border-radius: .5rem;
+  font-size: 1.2rem;
+  font-weight: 600;
+  margin-top: 2rem;
+  overflow: hidden;
+  padding: .7rem .75rem;
+  position: relative;
+  text-decoration: none;
+  transition: all .3s ease;
+  width: 90%;
+  z-index: 10;
+}
+
+.inside-page__btn::before { 
+  content: "";
+  height: 100%;
+  left: 0;
+  position: absolute;
+  top: 0;
+  transform: scaleY(0);
+  transition: all .3s ease;
+  width: 100%;
+  z-index: -1;
+}
+
+.inside-page__btn--city { 
+  border-color: #6f676b;
+  color: #514b4e;
+}
+
+.inside-page__btn--city::before { 
+  background-color: #615a5d;
+}
+
+
+.inside-page__btn:hover { 
+  color: #fafbfa;
+}
+
+.inside-page__btn:hover::before { 
+  transform: scaleY(1);
+}
+
+/* Layout Structure=========================================*/
+
+
+
+/* Container to hold all cards in one place */
+.card-area {
+  align-items: center;
+  display: flex;
+  flex-wrap: nowrap;
+  height: 100%;
+  justify-content: space-evenly;
+  padding: 1rem;
+}
+
+/* Card ============================================*/
+
+/* Area to hold an individual card */
+.card-section {
+  align-items: center;
+  display: flex;
+  height: 100%;
+  justify-content: center;
+  width: 100%;
+}
+
+/* A container to hold the flip card and the inside page */
+.card {
+  background-color: rgba(0,0,0, .05);
+  box-shadow: -.1rem 1.7rem 6.6rem -3.2rem rgba(0,0,0,0.5);
+  height: 30rem;
+  position: relative;
+  transition: all 1s ease;
+  width: 30rem;
+}
+
+/* Flip card - covering both the front and inside front page */
+
+/* An outer container to hold the flip card. This excludes the inside page */
+.flip-card {
+  height: 30rem;
+  perspective: 100rem;
+  position: absolute;
+  right: 0;
+  transition: all 1s ease;
+  visibility: hidden;
+  width: 30rem;
+  z-index: 100;
+}
+
+/* The outer container's visibility is set to hidden. This is to make everything within the container NOT set to hidden  */
+/* This is done so content in the inside page can be selected */
+.flip-card > * {
+  visibility: visible;
+}
+
+/* An inner container to hold the flip card. This excludes the inside page */
+.flip-card__container {
+  height: 100%;
+  position: absolute;
+  right: 0;
+  transform-origin: left;
+  transform-style: preserve-3d;
+  transition: all 1s ease;
+  width: 100%;
+}
+
+.card-front,
+.card-back {
+  backface-visibility: hidden;
+  height: 100%;
+  left: 0;
+  position: absolute;
+  top: 0;
+  width: 100%;
+}
+
+/* Styling for the front side of the flip card */
+
+/* container for the front side */
+.card-front {
+  background-color: #fafbfa;
+  height: 30rem;
+  width: 30rem;
+}
+
+/* Front side's top section */
+.card-front__tp {
+  align-items: center;
+  /* clip-path: polygon(0 0, 100% 0, 100% 90%, 57% 90%, 50% 100%, 43% 90%, 0 90%); */
+  display: flex;
+  flex-direction: column;
+  height: 12rem;
+  justify-content: center;
+  padding: .75rem;
+}
+
+.card-front__tp--city {
+    background: linear-gradient(
+        to bottom,
+        #656569,
+        #404042
+      );
+}
+
+/* Front card's bottom section */
+.card-front__bt {
+  align-items: center;
+  display: flex;
+  justify-content: center;
+}
+
+/* Styling for the back side of the flip card */
+
+.card-back {
+  background-color: #fafbfa;
+  transform: rotateY(180deg);
+}
+
+/* Specifically targeting the <video> element */
+.img__container {
+  clip-path: polygon(0% 0%, 100% 0%, 90% 50%, 100% 100%, 0% 100%);
+  height: auto;
+  min-height: 100%;
+  object-fit: cover;
+  width: 100%;
+}
+
+/* Inside page */
+
+.inside-page {
+  background-color: #fafbfa;
+  box-shadow: inset 20rem 0px 5rem -2.5rem rgba(0,0,0,0.25);
+  height: 100%;
+  padding: 1rem;
+  position: absolute;
+  right: 0;
+  transition: all 1s ease;
+  width: 30rem;
+  z-index: 1;
+}
+
+.inside-page__container {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  text-align: center; 
+  width: 100%;
+}
+
+/* Functionality ====================================*/
+
+/* This is to keep the card centered (within its container) when opened */
+.card:hover {
+  box-shadow:
+  -.1rem 1.7rem 6.6rem -3.2rem rgba(0,0,0,0.75);
+  width: 30rem;
+}
+
+/* When the card is hovered, the flip card container will rotate */
+.card:hover .flip-card__container {
+  transform: rotateY(-180deg);
+}
+
+/* When the card is hovered, the shadow on the inside page will shrink to the left */
+.card:hover .inside-page {
+  box-shadow: inset 1rem 0px 5rem -2.5rem rgba(0,0,0,0.1);
 }
