--- a/src/css/componentsCss/CaseContainerHome.css
+++ b/src/css/componentsCss/CaseContainerHome.css
@@ -1,112 +1,17 @@
-/* * {
-    background-color: #faeab1;
-} */
 
-/* 
-.addCase{
-    position: fixed;
-    bottom: 9vh;
-    right: 5vw;
-    z-index: 2;
-    background: #FF4742;
-    border: 1px solid #FF4742;
-    border-radius: 6px;
-    box-shadow: rgba(0, 0, 0, 0.1) 1px 2px 4px;
-    box-sizing: border-box;
-    color: #FFFFFF;
-    cursor: pointer;
-    display: inline-block;
-    font-family: nunito,roboto,proxima-nova,"proxima nova",sans-serif;
-    font-size: 16px;
-    font-weight: 800;
-    line-height: 16px;
-    min-height: 50px;
-    outline: 0;
-    padding: 12px 14px;
-    text-align: center;
-    text-rendering: geometricprecision;
-    text-transform: none;
-    user-select: none;
-    -webkit-user-select: none;
-    touch-action: manipulation;
-    vertical-align: middle;
-}
-.addCase:hover,
-.addCase:active {
-  background-color: #f3231c;
-}
-.CaseContainerMainOuter {
-    background-color: hsla(0, 0%, 100%, .01);
-    border: 2px solid hsla(0, 0%, 100%, .5);
-    border-radius: 1rem;
-    backdrop-filter: blur(12px);
-    display: flex;
-    height:30vh;
-    padding: 1rem;
-    color: white;
-    border-radius: 1rem;
-}
-
-.CaseBrief {
-    width: 50%;
-    margin-right: 10%;
-}
-
-.CaseNameDiv {
-    font-size: 2.5vw;
-    max-height: 12vh;
-    overflow-y: scroll;
-}
-.CaseDescriptionDiv{
-    padding-top: 0.5rem;
-}
-.CaseDescriptionDiv p{
-    overflow-y: scroll;
-    margin-bottom: 0px;
-    max-height: 18vh;
-}
-::-webkit-scrollbar {
-    display: none;
-    width: 16px;
-}
-.CaseImage {
-    height: 100%;
-    margin-right: 10%;
-}
-.CaseImage img{
-    height: 100%;
-}
-.AddNewDetailButtons {
-    width:10%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-}
-.AddNewDetailButton{
-    width:100%;
-    padding:0.8rem 0.5rem;
-    font-weight: 600;
-    font-size: 1rem;
-    background-color: white;
-    border: none;
-    border-radius: 6px;
-    color: black;
-}
-.AddNewDetailButton:hover{
-    background-color: black;
-    color: white;
-} */
 /* CSS reset */
-*,
-*::after,
-*::before {
+#OuterCaseContainer *,
+#OuterCaseContainer *::after,
+#OuterCaseContainer *::before {
   box-sizing: inherit;
-  margin: 0;
-  padding: 0;
+  /* margin: 0;
+  padding: 0; */
+  font-size: 100%;
 }
 
-html { font-size: 62.5%; }
+/* html { font-size: 62.5%; } */
 #OuterCaseContainer{
+  /* font-size: 62.5%; */
     box-sizing: border-box;
     font-family: 'Open Sans', sans-serif;
     position: relative;
@@ -132,8 +37,9 @@ html { font-size: 62.5%; }
     font-weight: 800;
     line-height: 16px;
     min-height: 50px;
+    min-width: 8rem;
     outline: 0;
-    padding: 12px 14px;
+    padding-top:12px;
     text-align: center;
     text-rendering: geometricprecision;
     text-transform: none;
@@ -203,6 +109,7 @@ html { font-size: 62.5%; }
 .inside-page__text {
   color: #333;
   font-size: 1vw;
+  /* margin-bottom: 2rem; */
 }
 
 /* Icons ===========================================*/
@@ -225,7 +132,7 @@ html { font-size: 62.5%; }
   font-weight: 600;
   margin-top: 2rem;
   overflow: hidden;
-  padding: .7rem .75rem;
+  padding: 0.7rem 0.75rem;
   position: relative;
   text-decoration: none;
   transition: all .3s ease;
@@ -284,7 +191,9 @@ html { font-size: 62.5%; }
   align-items: center;
   display: flex;
   height: 100%;
-  justify-content: center;
+  /* justify-content: space-around; */
+  flex-wrap: wrap;
+  gap:3rem;
   width: 100%;
 }
 
@@ -292,23 +201,23 @@ html { font-size: 62.5%; }
 .card {
   background-color: rgba(0,0,0, .05);
   box-shadow: -.1rem 1.7rem 6.6rem -3.2rem rgba(0,0,0,0.5);
-  height: 30rem;
+  height: 20rem;
   position: relative;
   transition: all 1s ease;
-  width: 30rem;
+  width: 20rem;
 }
 
 /* Flip card - covering both the front and inside front page */
 
 /* An outer container to hold the flip card. This excludes the inside page */
 .flip-card {
-  height: 30rem;
+  height: 20rem;
   perspective: 100rem;
   position: absolute;
   right: 0;
   transition: all 1s ease;
   visibility: hidden;
-  width: 30rem;
+  width: 20rem;
   z-index: 100;
 }
 
@@ -344,8 +253,8 @@ html { font-size: 62.5%; }
 /* container for the front side */
 .card-front {
   background-color: #fafbfa;
-  height: 30rem;
-  width: 30rem;
+  height: 20rem;
+  width: 20rem;
 }
 
 /* Front side's top section */
@@ -354,7 +263,7 @@ html { font-size: 62.5%; }
   /* clip-path: polygon(0 0, 100% 0, 100% 90%, 57% 90%, 50% 100%, 43% 90%, 0 90%); */
   display: flex;
   flex-direction: column;
-  height: 12rem;
+  height: 8rem;
   justify-content: center;
   padding: .75rem;
 }
@@ -400,7 +309,7 @@ html { font-size: 62.5%; }
   position: absolute;
   right: 0;
   transition: all 1s ease;
-  width: 30rem;
+  width: 20rem;
   z-index: 1;
 }
 
@@ -419,7 +328,7 @@ html { font-size: 62.5%; }
 .card:hover {
   box-shadow:
   -.1rem 1.7rem 6.6rem -3.2rem rgba(0,0,0,0.75);
-  width: 30rem;
+  width: 20rem;
 }
 
 /* When the card is hovered, the flip card container will rotate */
