--- a/src/css/componentsCss/ClueCard.css
+++ b/src/css/componentsCss/ClueCard.css
@@ -1,3 +1,9 @@
+*{
+	margin: 0;
+	padding: 0;
+	box-sizing: inherit;
+}
+
 .ClueCardDiv {
 	background-color: rgba(255, 255, 255, 0.5);
 	width: calc(100% - calc(4.8rem * 2));
@@ -35,7 +41,7 @@
 }
 
 .ClueDescription {
-	color: rgba(255, 255, 255, 0.7);
+	color: rgba(255, 255, 255);
 	background-color: rgba(0, 0, 0, 0.5);
 	width: calc(100% - calc(2.8rem * 2));
 	height: 320px;
@@ -54,6 +60,7 @@
 .ClueImage:hover + .ClueDescription,
 .ClueDescription:hover {
 	opacity: 1;
+	backdrop-filter: blur(12px);
 }
 
 .ClueCategory {
@@ -64,4 +71,38 @@
 
 .ClueDate {
 	margin-bottom: 0.5rem;
+}
+
+.AddClue{
+    position: fixed;
+    bottom: 9vh;
+    right: 5vw;
+    z-index: 20;
+    background: #FF4742;
+    border: 1px solid #FF4742;
+    border-radius: 6px;
+    box-shadow: rgba(0, 0, 0, 0.1) 1px 2px 4px;
+    box-sizing: border-box;
+    color: #FFFFFF;
+    cursor: pointer;
+    display: inline-block;
+    font-family: nunito,roboto,proxima-nova,"proxima nova",sans-serif;
+    font-size: 16px;
+    font-weight: 800;
+    line-height: 16px;
+    min-height: 50px;
+    min-width: 8rem;
+    outline: 0;
+    padding-top:12px;
+    text-align: center;
+    text-rendering: geometricprecision;
+    text-transform: none;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    vertical-align: middle;
+}
+.AddClue:hover,
+.AddClue:active {
+  background-color: #f3231c;
 }
