--- a/src/App.css
+++ b/src/App.css
@@ -3,9 +3,5 @@
   padding: 0;
 }
 body{
-  background-image: url("./assets/WhatsApp Image 2024-03-09 at 7.43.18 PM.jpeg");
-  background-repeat: no-repeat;
-  background-size:cover;
-  background-blend-mode: hard-light;
-  background-color: black;
+  background-color: #f5f5f5;
 }
