--- a/src/css/Login.css
+++ b/src/css/Login.css
@@ -1,86 +1,113 @@
-.mainpage{
-    margin-top: 15vh;
-    height: 70vh;
-    width: 60vh;
-    margin-left: calc( 50vw - 30vh );
-    background-color: hsla(0, 0%, 100%, .01);
-    border: 2px solid hsla(0, 0%, 100%, .5);
-    border-radius: 1rem;
-    backdrop-filter: blur(12px);
-    /* opacity: 0.5; */
-  }
-  .login__form{
-    padding: 2.5rem 1.5rem;
-  }
-  .login__title{
-    text-align: center;
+.OuterLoginPage {
+  height: 100vh;
+  width: 100vw;
+  background-image: url("../assets/WhatsApp\ Image\ 2024-03-09\ at\ 7.43.18\ PM.jpeg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-blend-mode: hard-light;
+  background-color: black;
+}
+
+.login__form {
+  position: relative;
+  top: 10%;
+  margin: 0 auto;
+  max-width: 80%;
+  width: 60vh;
+  max-height: 70vh;
+  height: auto;
+  padding: 2.5rem 1.5rem;
+  border: 2px solid white;
+  border-radius: 15px;
+  backdrop-filter: blur(12px);
+}
+
+.login__title {
+  text-align: center;
   font-size: 2rem;
   margin-bottom: 2rem;
   color: white;
+}
+
+.login__inputs {
+  display: flex;
+  flex-direction: column;
+}
+
+.login__box {
+  align-items: center;
+  border: 2px solid hsla(0, 0%, 100%, .7);
+  padding-inline: 1.25rem;
+  border-radius: 4rem;
+  margin-bottom: 1.5rem;
+  background-color: transparent;
+}
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+  transition: background-color 5000s ease-in-out 0s;
+  -webkit-text-fill-color: white;
+}
+
+.login__input {
+  border: none;
+  outline: none;
+  width: 100%;
+  background: none;
+  color: white;
+  padding-block: 1rem;
+  background-color: transparent;
+}
+
+.login__input::placeholder {
+  color: white;
+}
+
+.login__check {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 1.5rem;
+}
+
+a {
+  color: rgb(187, 187, 255);
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
+.login__button {
+  align-items: center;
+  width: 90%;
+  outline: none;
+  border-radius: 4rem;
+  background-color: white;
+  border: 1px solid white;
+  padding: 1rem;
+  font-size: 1rem;
+  font-weight: 700;
+  margin-bottom: 1.25rem;
+  display: flex;
+  justify-content: center;
+}
+
+.login__button:hover {
+  background-color: black;
+  color: white;
+}
+
+.login__register {
+  font-size: larger;
+  color: white;
+  text-align: center;
+}
+
+@media screen and (max-width: 768px) {
+  .login__form {
+    width: 80%;
   }
-  
-  .login__inputs{
-    display: flex;
-    flex-direction: column;
-  }
-  .login__box {
-    align-items: center;
-    border: 2px solid hsla(0, 0%, 100%, .7);
-    padding-inline: 1.25rem;
-    border-radius: 4rem;
-    margin-bottom: 1.5rem;
-    background-color: transparent;
-  }
-  input:-webkit-autofill,
-  input:-webkit-autofill:hover,
-  input:-webkit-autofill:focus,
-  input:-webkit-autofill:active {
-      transition: background-color 5000s ease-in-out 0s;
-      -webkit-text-fill-color: white;
-  }
-  .login__input{
-    border:none;
-    outline:none;
-    width:100%;
-    background: none;
-    color:white;
-    padding-block: 1rem;
-    background-color: transparent;
-  }
-  .login__input::placeholder {
-    color: white;
-  }
-  .login__check{
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 1.5rem;
-  }
-  a{
-    color: white;
-    text-decoration: none;
-  }
-  a:hover{
-    text-decoration: underline;
-  }
-  .login__button{
-    align-items: center;
-    width: 100%;
-    outline: none;
-    border-radius: 4rem;
-    background-color: white;
-    border: 1px solid white;
-    padding: 1rem;
-    font-size: 1rem;
-    font-weight: 700;
-    margin-bottom: 1.25rem;
-  }
-  .login__button:hover{
-    background-color: black;
-    color:white;
-  }
-  .login__register{
-    text-align: center;
-  }
-  @media (width<600px) {
-    
-  }
+}
