--- a/src/css/componentsCss/AddCase.css
+++ b/src/css/componentsCss/AddCase.css
@@ -13,7 +13,7 @@
   align-items: center;
 }
 
-.container {
+.CaseContainer {
   background-color: #fff;
   padding: 20px;
   border-radius: 10px;
@@ -23,12 +23,12 @@
 }
 
 
-.Title {
+.CaseFormInputTitle {
   font-weight: bold;
   margin-bottom: 5px;
 }
 
-input[type='text'],
+.CaseWriteContainer input[type='text'],
 textarea {
   width: 90%;
   padding: 10px;
@@ -38,33 +38,34 @@ textarea {
   box-sizing: border-box;
 }
 
-textarea {
+.CaseWriteContainer textarea {
   resize: none;
   height: 100px;
 }
 
-#upload-container {
-  margin-bottom: 20px;
+#CaseUploadContainer{
+ margin-bottom: 20px;
 }
 
-#dropzone {
+#CaseDropzone {
   border: 2px dashed #ccc;
   padding: 20px;
   text-align: center;
   cursor: pointer;
 }
 
-#dropzone p {
+#CaseDropzone p {
   margin: 0;
 }
 
-#preview {
+#CaseImgPreview {
+  max-height: 200px;
   max-width: 100%;
   height: auto;
   margin-top: 10px;
 }
 
-button[type='submit'] {
+.AddCaseForm button[type='submit'] {
   background-color: #4caf50;
   width: 93%;
   color: #fff;
@@ -75,11 +76,11 @@ button[type='submit'] {
   transition: background-color 0.3s ease;
 }
 
-button[type='submit']:hover {
+.AddCaseForm button[type='submit']:hover {
   background-color: #45a049;
 }
 
-.writecontainer  input[type=text] {
+.CaseWriteContainer  input[type=text] {
   border: 1px solid black;
   border-radius: 4px;
   width: 90%;
