--- a/src/css/componentsCss/AddClue.css
+++ b/src/css/componentsCss/AddClue.css
@@ -9,11 +9,11 @@
 .AddClueOuter form {
   display: flex;
   flex-direction: column;
-  /* justify-content: center; */
+  max-height: 90vh;
   align-items: center;
 }
 
-.container {
+.ClueContainer {
   background-color: #fff;
   padding: 20px;
   border-radius: 10px;
@@ -23,14 +23,14 @@
 }
 
 
-.Title {
+.ClueFormInputTitle {
   font-weight: bold;
   margin-bottom: 5px;
 }
 
-input[type='text'],
+.ClueWriteContainer input[type='text'],
 textarea {
-  width: 90%;
+  width: 100%;
   padding: 10px;
   margin-bottom: 15px;
   border: 1px solid #000000;
@@ -38,33 +38,34 @@ textarea {
   box-sizing: border-box;
 }
 
-textarea {
+.ClueWriteContainer textarea {
   resize: none;
   height: 100px;
 }
 
-#upload-container {
-  margin-bottom: 20px;
+#ClueUploadContainer{
+ margin-bottom: 20px;
 }
 
-#dropzone {
+#ClueDropzone {
   border: 2px dashed #ccc;
   padding: 20px;
   text-align: center;
   cursor: pointer;
 }
 
-#dropzone p {
+#ClueDropzone p {
   margin: 0;
 }
 
-#preview {
+#ClueImgPreview {
   max-width: 100%;
+  max-height: 200px;
   height: auto;
   margin-top: 10px;
 }
 
-button[type='submit'] {
+.AddClueForm button[type='submit'] {
   background-color: #4caf50;
   width: 93%;
   color: #fff;
@@ -75,11 +76,11 @@ button[type='submit'] {
   transition: background-color 0.3s ease;
 }
 
-button[type='submit']:hover {
+.AddClueForm button[type='submit']:hover {
   background-color: #45a049;
 }
 
-.writecontainer  input[type=text] {
+.ClueWriteContainer  input[type=text] {
   border: 1px solid black;
   border-radius: 4px;
   width: 90%;
