--- a/src/css/componentsCss/PersonCard.css
+++ b/src/css/componentsCss/PersonCard.css
@@ -1,5 +1,6 @@
-.PersonContainer {
+.ShowPersonContainer {
     font-size: 16px;
+    /* width: 100vw; */
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
