--- a/src/css/componentsCss/AddClue.css
+++ b/src/css/componentsCss/AddClue.css
@@ -3,13 +3,13 @@
   justify-content: center;
   align-items: center;
   min-height: 100vh;
-  background-color: #f5f5f5;
+  /* background-color: #f5f5f5; */
 }
 
 .AddClueOuter form {
   display: flex;
   flex-direction: column;
-  max-height: 90vh;
+  /* max-height: 90vh; */
   align-items: center;
 }
 
@@ -18,8 +18,8 @@
   padding: 20px;
   border-radius: 10px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  width: 400px;
-  max-width: 90%;
+  width: 90%;
+  max-width: 400px;
 }
 
 
@@ -29,7 +29,7 @@
 }
 
 .ClueWriteContainer input[type='text'],
-textarea {
+.ClueWriteContainer textarea {
   width: 100%;
   padding: 10px;
   margin-bottom: 15px;
@@ -59,15 +59,21 @@ textarea {
 }
 
 #ClueImgPreview {
-  max-width: 100%;
   max-height: 200px;
+  max-width: 100%;
   height: auto;
   margin-top: 10px;
 }
 
-.AddClueForm button[type='submit'] {
+.ClueContainerButton {
+  align-items: center;
+  display: flex;
+  width: 100%;
+}
+
+.ClueContainer button[type='submit'] {
   background-color: #4caf50;
-  width: 93%;
+  width: 100%;
   color: #fff;
   padding: 10px;
   border: none;
@@ -76,12 +82,6 @@ textarea {
   transition: background-color 0.3s ease;
 }
 
-.AddClueForm button[type='submit']:hover {
+.ClueContainer button[type='submit']:hover {
   background-color: #45a049;
-}
-
-.ClueWriteContainer  input[type=text] {
-  border: 1px solid black;
-  border-radius: 4px;
-  width: 90%;
 }
