--- a/src/css/Login.css
+++ b/src/css/Login.css
@@ -6,11 +6,26 @@
   background-size: cover;
   background-blend-mode: hard-light;
   background-color: black;
+  display: flex;
+  flex-direction: row;
+}
+
+.LoginLogoImg {
+  width: 100%;
+  /* object-fit: contain; */
+  display: flex;
+  justify-content: center;
+  padding-bottom: 2vh;
+}
+
+.LoginLogoImg img {
+  height: 30px;
 }
 
 .login__form {
-  position: relative;
-  top: 10%;
+  align-self: center;
+  /* position: relative;
+  top: 10%; */
   margin: 0 auto;
   max-width: 80%;
   width: 60vh;
@@ -80,9 +95,14 @@ a:hover {
   text-decoration: underline;
 }
 
+.LoginBtnCntr{
+  display: flex;
+  justify-content: center;
+}
+
 .login__button {
   align-items: center;
-  width: 90%;
+  width: 100%;
   outline: none;
   border-radius: 4rem;
   background-color: white;
@@ -93,6 +113,7 @@ a:hover {
   margin-bottom: 1.25rem;
   display: flex;
   justify-content: center;
+  cursor: pointer;
 }
 
 .login__button:hover {
