--- a/src/css/Signup.css
+++ b/src/css/Signup.css
@@ -1,6 +1,6 @@
 .signup__button{
     align-items: center;
-    width: 90%;
+    width: 100%;
     outline: none;
     border-radius: 4rem;
     background-color: white;
@@ -9,7 +9,14 @@
     font-size: 1rem;
     font-weight: 700;
     margin-bottom: 0.5rem;
+    cursor: pointer;
   }
+
+  .signup__button:hover {
+    background-color: black;
+    color: white;
+  }
+  
   .signup__box {
     align-items: center;
     border: 2px solid hsla(0, 0%, 100%, .7);
