--- a/src/css/componentsCss/CaseContainerHome.css
+++ b/src/css/componentsCss/CaseContainerHome.css
@@ -6,7 +6,7 @@
   box-sizing: inherit;
   /* margin: 0;
   padding: 0; */
-  font-size: 100%;
+  /* font-size: 100%; */
 }
 
 /* html { font-size: 62.5%; } */
@@ -15,16 +15,23 @@
     box-sizing: border-box;
     font-family: 'Open Sans', sans-serif;
     position: relative;
-    margin:1rem 18rem;
+    margin-top: 5rem;
+    margin-bottom: 5rem;
     /* background-color: red; */
     display: flex;
     /* gap:3rem; */
   }
+
+.AddCaseBtnCntr {
+  display: flex;
+  position: fixed;
+  bottom: 9vh;
+  right: 5vw;
+  z-index: 101;
+}
+
 .addCase{
-    position: fixed;
-    bottom: 9vh;
-    right: 5vw;
-    z-index: 20;
+
     background: #FF4742;
     border: 1px solid #FF4742;
     border-radius: 6px;
@@ -53,7 +60,6 @@
 .addCase:active {
   background-color: #f3231c;
 }
-/* Typography =======================*/
 
 /* Headings */
 
@@ -71,7 +77,7 @@
 
 /* Mixed */
 
-/* For both inside page's main heading and 'view me' text on card front cover */
+/* For both inside page's main heading and 'view case' text on card front cover */
 .inside-page__heading,
 .card-front__text-view {
   font-size: 1.3rem;
@@ -89,6 +95,8 @@
     gap:1.3rem;
 }
 .view__case{
+    position: absolute;
+    top: 27rem;
     border: 2px solid #584e53;
     outline: none;
     border-radius: 5px;
@@ -97,14 +105,25 @@
 /* Front cover */
 
 .card-front__tp { color: #fafbfa; }
-
-/* For pricing text on card front cover */
+/* 
+For pricing text on card front cover
 .card-front__text-price {
   font-size: 1.2rem;
   margin-top: -.2rem;
-}
+} */
 
 /* Back cover */
+
+.CaseDescriptionCntr {
+  max-height: 20rem;
+  overflow: scroll;
+  scrollbar-width: none;
+}
+
+.CluePrsnBtnCntr {
+  position: absolute;
+  bottom: 2vh;
+}
 
 /* For inside page's body text */
 .inside-page__text {
@@ -203,23 +222,23 @@
 .card {
   background-color: rgba(0,0,0, .05);
   box-shadow: -.1rem 1.7rem 6.6rem -3.2rem rgba(0,0,0,0.5);
-  height: 20rem;
+  height: 35rem;
   position: relative;
   transition: all 1s ease;
-  width: 20rem;
+  width: 25rem;
 }
 
 /* Flip card - covering both the front and inside front page */
 
 /* An outer container to hold the flip card. This excludes the inside page */
 .flip-card {
-  height: 20rem;
+  height: 35rem;
   perspective: 100rem;
   position: absolute;
   right: 0;
   transition: all 1s ease;
   visibility: hidden;
-  width: 20rem;
+  width: 25rem;
   z-index: 100;
 }
 
@@ -254,9 +273,13 @@
 
 /* container for the front side */
 .card-front {
-  background-color: #fafbfa;
-  height: 20rem;
-  width: 20rem;
+  background: url("../../assets/TopSecret.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 300px 100px;
+  background-color: #ebc489;
+  height: 35rem;
+  width: 25rem;
 }
 
 /* Front side's top section */
@@ -288,15 +311,17 @@
 /* Styling for the back side of the flip card */
 
 .card-back {
-  background-color: #fafbfa;
+  display: flex;
+  align-items: center;
+  background-color: #ebc28a;
   transform: rotateY(180deg);
 }
 
 /* Specifically targeting the <video> element */
 .img__container {
-  clip-path: polygon(0% 0%, 100% 0%, 90% 50%, 100% 100%, 0% 100%);
+  /* clip-path: polygon(0% 0%, 100% 0%, 90% 50%, 100% 100%, 0% 100%); */
   height: auto;
-  min-height: 100%;
+  max-height: 90%;
   object-fit: contain;
   width: 100%;
 }
@@ -304,14 +329,14 @@
 /* Inside page */
 
 .inside-page {
-  background-color: #fafbfa;
-  box-shadow: inset 20rem 0px 5rem -2.5rem rgba(0,0,0,0.25);
+  background-color: #ebc489;
+  box-shadow: inset 25rem 0px 5rem -2.5rem rgba(0,0,0,0.25);
   height: 100%;
   padding: 1rem;
   position: absolute;
   right: 0;
   transition: all 1s ease;
-  width: 20rem;
+  width: 25rem;
   z-index: 1;
 }
 
@@ -330,7 +355,7 @@
 .card:hover {
   box-shadow:
   -.1rem 1.7rem 6.6rem -3.2rem rgba(0,0,0,0.75);
-  width: 20rem;
+  width: 25rem;
 }
 
 /* When the card is hovered, the flip card container will rotate */
