--- a/src/css/componentsCss/PersonCard.css
+++ b/src/css/componentsCss/PersonCard.css
@@ -13,8 +13,8 @@
 }
 
 .PersonCard {
-    margin-left: 2%;
-    margin-right: 2%;
+    margin-left: 2vw;
+    margin-right: 2vw;
     position: relative;
     cursor: pointer;
 }
