--- a/src/css/componentsCss/PersonCard.css
+++ b/src/css/componentsCss/PersonCard.css
@@ -26,9 +26,9 @@
     justify-content: center;
     align-items: center;
     z-index: 1;
-    transform: translateY(150px);
+    transform: translateY(200px);
     width: 300px;
-    height: 300px;
+    height: 400px;
     transition: 0.5s;
 }
 
@@ -37,30 +37,40 @@
     transform: translateY(0);
 }
 
-.content {
+.OutContent {
     opacity: 1;
     transition: 0.5s;
+    color: #fff;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
 
+.ShowPrsnDetails {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: absolute;
+    bottom: 15px;
+}
+
 .PersonCard:hover .content {
     opacity: 1;
 }
 
-.content img {
-    max-width: 100px;
+.OutContent img {
+    max-width: 200px;
+    max-height: 200px;
 }
 
-.content h3 {
+.OutContent h3 {
     margin: 10px 0 0;
     padding: 0;
-    color: #fff;
     align-items: center;
     font-size: 1.5em;
 }
+
 
 .PersonCardInner {
     position: relative;
@@ -68,13 +78,22 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 20px;
+    /* padding: 20px; */
     box-sizing: border-box;
     box-shadow: 0 20px 50px rgba(0, 0, 0, 0.8);
     transform: translateY(-150px);
     width: 300px;
     height: 300px;
       transition: 0.5s;
+}
+.InContent {
+    opacity: 1;
+    transition: 0.5s;
+    margin: 20px;
+    height: 250px;
+    overflow: scroll;
+    scrollbar-width: none;
+    padding: 2px;
 }
 
 .PersonCard:hover .PersonCardInner {
