--- a/src/css/componentsCss/NavBar.css
+++ b/src/css/componentsCss/NavBar.css
@@ -2,7 +2,7 @@
 
 .navbar {
   background: linear-gradient(89.7deg, rgb(0, 0, 0) -10.7%, rgb(53, 92, 125) 88.8%);
-    /* background-color: green; */
+  width: 100%;
     display: flex;
     overflow: hidden;
     color: white;
