--- a/src/css/componentsCss/ClueCard.css
+++ b/src/css/componentsCss/ClueCard.css
@@ -6,7 +6,7 @@
 
 .ClueCardDiv {
 	background-color: rgba(255, 255, 255, 0.5);
-	width: calc(100% - calc(4.8rem * 2));
+	width: calc(100% - calc(0.8rem * 2));
 	max-width: 480px;
 	padding: 2.8rem;
 	margin: 2.2rem;
@@ -40,6 +40,7 @@
 }
 
 .ClueImage img {
+	max-height: 400px;
 	max-width: 300px;
 }
 
