--- a/src/css/componentsCss/CaseContainerHome.css
+++ b/src/css/componentsCss/CaseContainerHome.css
@@ -312,6 +312,9 @@ For pricing text on card front cover
 
 .card-back {
   display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  padding: 2rem;
   align-items: center;
   background-color: #ebc28a;
   transform: rotateY(180deg);
@@ -366,4 +369,18 @@ For pricing text on card front cover
 /* When the card is hovered, the shadow on the inside page will shrink to the left */
 .card:hover .inside-page {
   box-shadow: inset 1rem 0px 5rem -2.5rem rgba(0,0,0,0.1);
+}
+
+.CaseEDButtons {
+	display: flex;
+	/* align-items: center; */
+  width: 100%;
+	justify-content: space-evenly;
+}
+
+.CaseEDButtons button {
+	background-color: transparent;
+	border: none;
+	font-size: 2.0em;
+	cursor: pointer;
 }
