--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@
 }
 body{
   background-color: #f5f5f5;
+  transition: background 0.2s linear;
   /* background-color: #0F172A; */
 }
 .dark{
@@ -11,6 +12,42 @@ body{
 }
 .themebutton{
   position: fixed;
-  left:1vw;
-  top:3vh;
+  right:1vw;
+  top:10vh;
+}
+.checkbox {
+  opacity: 0;
+  position: absolute;
+}
+
+.checkbox-label {
+  background-color: #111;
+  width: 50px;
+  height: 26px;
+  border-radius: 50px;
+  position: relative;
+  padding: 5px;
+  cursor: pointer;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.fa-moon {color: #f1c40f;}
+
+.fa-sun {color: #f39c12;}
+
+.checkbox-label .ball {
+  background-color: #fff;
+  width: 22px;
+  height: 22px;
+  position: absolute;
+  left: 2px;
+  top: 5px;
+  border-radius: 50%;
+  transition: transform 0.2s linear;
+}
+
+.checkbox:checked + .checkbox-label .ball {
+  transform: translateX(35px);
 }
