--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,10 @@
   margin: 0;
   padding: 0;
 }
+html{
+  overflow: scroll;
+  scrollbar-width: none;
+}
 body{
   background-color: #f5f5f5;
   transition: background 0.2s linear;
